# synapsed

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_SESSION.md  CLAUDE_SWARM_GUIDE.md  COMPILATION_STATUS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_STATUS.md  README.md  SEMANTIC_VISION.md  build-demo.sh  check-all.sh  check-build.sh  fix-all-paths.sh  fix-paths.sh  intent_declaration.rs  migrate.sh  push-to-github.sh  run-demo.sh  run-live-demo.sh  run-simple-demo.sh  run-with-monitor.sh  test-mcp-flow.sh  test-viewer.sh  verify.sh
benches/: Cargo.toml
benches/benches/: core_benchmarks.rs  crypto_benchmarks.rs
benches/src/: lib.rs
crates/applications/synapsed-mcp/: ANONYMOUS_ARCHITECTURE.md  Cargo.toml  RMCP_INTEGRATION.md  TRANSPORT_ARCHITECTURE.md
crates/applications/synapsed-mcp/src/: agent_spawner.rs  anonymous_transport.rs  client.rs  client_transport.rs  distributed_state.rs  error.rs  intent_store.rs  lib.rs  main.rs  main_rmcp.rs  observability.rs  p2p_transport.rs  protocol.rs  resources.rs  rmcp_adapter.rs  server.rs  swarm_tools.rs  tools.rs  transport.rs
crates/applications/synapsed-payments/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  check_output.txt
crates/applications/synapsed-payments/examples/: anonymous_subscription.rs  basic_payment.rs
crates/applications/synapsed-payments/src/: builder.rs  did_integration.rs  did_integration_simple.rs  error.rs  gateway.rs  lib.rs  processor.rs  storage.rs  substrate_integration.rs  traits.rs  types.rs  wasm_pwa.rs  zkp.rs  zkp_simple.rs
crates/applications/synapsed-payments/tests/: integration_tests.rs  zkp_anonymous_payment_tests.rs  zkp_did_rotation_tests.rs  zkp_nullifier_tests.rs
crates/bindings/synapsed-wasm-bindings/: Cargo.toml  README.md  build.sh
crates/bindings/synapsed-wasm-bindings/src/: intent.rs  lib.rs  observability.rs  promise.rs  verify.rs
crates/compute/synapsed-neural-core/: Cargo.toml  README.md
crates/compute/synapsed-neural-core/src/: lib.rs
crates/compute/synapsed-neural-core/tests/: integration_tests.rs
crates/compute/synapsed-wasm/: Cargo.toml  README.md
crates/compute/synapsed-wasm/benches/: module_execution_benchmarks.rs  wasm_runtime_benchmarks.rs
crates/compute/synapsed-wasm/examples/: basic_runtime.rs
crates/compute/synapsed-wasm/src/: crdt.rs  crypto.rs  did.rs  error.rs  lib.rs  network.rs  p2p.rs  pwa.rs  storage.rs  sync.rs  types.rs  zkp.rs
crates/compute/synapsed-wasm/tests/: integration_tests.rs
crates/core/synapsed-core/: Cargo.toml  Cargo.toml.standalone  README.md  test_serialization.rs
crates/core/synapsed-core/benches/: core_benchmarks.rs  performance_benchmarker.rs
crates/core/synapsed-core/src/: config.rs  error.rs  lib.rs  network.rs  observability.rs  runtime.rs  security.rs  serialization.rs  traits.rs  utils.rs
crates/core/synapsed-core/tests/: README.md  performance_integration_test.rs  simple_test.rs  test_integration.rs
crates/core/synapsed-crypto/: ARCHITECTURE_ANALYSIS.md  Cargo.toml  DILITHIUM_FIX.md  FINAL_SECURITY_AUDIT.md  KYBER_BUG_ANALYSIS.md  PERFORMANCE_REPORT.md  PERFORMANCE_UPDATE.md  README.md  SIDE_CHANNEL_AUDIT_REPORT.md  SIMD_ENHANCEMENT_REPORT.md  TESTING_REPORT.md  TEST_RESULTS_SUMMARY.md  verify_security.sh
crates/core/synapsed-crypto/benches/: dilithium_benchmarks.rs  kyber_benchmarks.rs  simd_enhanced_benchmarks.rs
crates/core/synapsed-crypto/docs/: AUDIT.md  DESIGN.md  SECURITY.md  nist-test-vector-plan.md
crates/core/synapsed-crypto/examples/: basic_encryption.rs  digital_signatures.rs  hybrid_mode.rs
crates/core/synapsed-crypto/src/: api.rs  constant_time.rs  dilithium.rs  error.rs  hash.rs  hybrid.rs  kyber.rs  lib.rs  ntt.rs  observability.rs  params.rs  poly.rs  random.rs  secure_memory.rs  simd_optimized.rs  traits.rs  utils.rs  utils_debug.rs
crates/core/synapsed-crypto/tests/: api_tests.rs  comprehensive_kyber_test.rs  (+23 more)
crates/core/synapsed-gpu/: Cargo.toml  README.md  lib.long-type-13788652670888186842.txt
crates/intent/synapsed-intent/: Cargo.toml  README.md
crates/intent/synapsed-promise/: Cargo.toml  README.md
crates/intent/synapsed-swarm/: Cargo.toml  README.md
crates/intent/synapsed-verify/: Cargo.toml  README.md
crates/monitor/synapsed-monitor/: Cargo.toml  README.md
crates/network/synapsed-consensus/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/network/synapsed-net/: Cargo.toml  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  check_output.txt  check_output2.txt  check_output_final.txt
crates/network/synapsed-routing/: Cargo.toml  README.md
crates/observability/synapsed-serventis/: Cargo.toml  README.md
crates/observability/synapsed-substrates/: Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  TRAIT_OBJECT_ANALYSIS.md
examples/end_to_end_demo/: Cargo.toml  README.md
examples/end_to_end_demo/src/: main.rs
examples/live-demo/: Cargo.toml
examples/live-demo/agent-definitions/: architect-agent.md  backend-agent.md  documentation-agent.md  review-agent.md  test-agent.md
examples/live-demo/src/: lib.rs  main.rs  mcp_client.rs  monitor_server.rs
examples/mcp-client/: Cargo.toml
examples/mcp-client/src/: main.rs
examples/mcp-server/: Cargo.toml  README.md
examples/mcp-server/src/: main.rs
examples/minimal-demo/: Cargo.toml
examples/promise-cooperation/: Cargo.toml  README.md
examples/promise-cooperation/src/: main.rs
examples/simple-mcp-server/: Cargo.toml  demo.py  query_db.py  test_client.py  visualize_intents.py
examples/simple-mcp-server/src/: html_streaming.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tools/builder/: Cargo.toml  README.md  TESTING.md
tools/builder/src/: builder.rs  composer.rs  lib.rs  recipe.rs  registry.rs  templates.rs  validator.rs
tools/builder/tests/: integration_tests.rs  property_tests.rs  scenario_tests.rs  snapshot_tests.rs
tools/intent-sdk/: Cargo.toml  INSTALLATION.md  package.json
tools/intent-sdk/lib/: mcp-server.js
tools/intent-sdk/src/: main.rs
tools/intent-sdk/templates/: claude-config.json
(+509 files in other folders)
