[package]
name = "synapsed-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Crates to benchmark
synapsed-core = { workspace = true }
synapsed-crypto = { workspace = true }
synapsed-storage = { workspace = true }
synapsed-net = { workspace = true }

# Benchmarking
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "crypto_benchmarks"
harness = false