[package]
name = "synapsed-e2e-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2e_demo"
path = "src/main.rs"

[dependencies]
synapsed-swarm = { path = "../../crates/intent/synapsed-swarm" }
synapsed-intent = { path = "../../crates/intent/synapsed-intent" }
synapsed-promise = { path = "../../crates/intent/synapsed-promise" }
synapsed-verify = { path = "../../crates/intent/synapsed-verify" }
synapsed-core = { path = "../../crates/core/synapsed-core" }

tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"