[package]
name = "mcp-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
synapsed-mcp = { path = "../../crates/applications/synapsed-mcp" }
synapsed-intent = { path = "../../crates/intent/synapsed-intent" }
synapsed-verify = { path = "../../crates/intent/synapsed-verify" }
synapsed-promise = { path = "../../crates/intent/synapsed-promise" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }