[package]
name = "minimal-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
synapsed-intent = { path = "../../crates/intent/synapsed-intent" }
synapsed-substrates = { path = "../../crates/observability/synapsed-substrates" }
synapsed-serventis = { path = "../../crates/observability/synapsed-serventis" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"