[package]
name = "simple-mcp-server"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "simple-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"