[package]
name = "synapsed-builder"
version = "0.1.0"
edition = "2021"
authors = ["Synapsed Team"]
license = "MIT OR Apache-2.0"
description = "Composable application builder for Synapsed modules"
keywords = ["builder", "composition", "modular", "assembly"]

[workspace]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
indexmap = "2.0"
petgraph = "0.6"

# Schema validation
jsonschema = "0.26"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
tempfile = "3.8"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"