[package]
name = "synapsed-mcp-standalone"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "synapsed-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1