[package]
name = "synapsed-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["mcp", "ai", "intent", "verification", "claude"]
categories = ["network-programming", "development-tools"]
description = "Model Context Protocol (MCP) server for intent verification in AI agents"

[[bin]]
name = "synapsed-mcp-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
synapsed-core = { workspace = true }
synapsed-intent = { workspace = true }
synapsed-promise = { workspace = true }
synapsed-verify = { workspace = true }

# MCP implementation using rmcp
rmcp = { version = "0.3", features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data structures
uuid = { workspace = true }
chrono = { workspace = true }
