[package]
name = "synapsed-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Synapsed Team"]
license = "MIT OR Apache-2.0"
description = "Post-quantum cryptography library with Kyber and Dilithium implementations"
repository = "https://github.com/synapsed/synapsed-crypto"
keywords = ["crypto", "post-quantum", "kyber", "dilithium", "ml-kem", "ml-dsa"]
categories = ["cryptography", "no-std"]

[dependencies]
# Core cryptographic primitives
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.7", features = ["derive"] }
subtle = { version = "2.5", default-features = false }

# Optional dependencies for std features
getrandom = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
hex = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

# Enhanced SIMD dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
parking_lot = { version = "0.12", optional = true }
lru = { version = "0.12", optional = true }

# Observability
synapsed-substrates = { path = "../../observability/synapsed-substrates", optional = true }
synapsed-serventis = { path = "../../observability/synapsed-serventis", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
hex-literal = "0.4"
serde_json = "1.0"
proptest = "1.7.0"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
lru = "0.12"

[features]
default = ["std", "simd-enhanced"]
std = ["sha3/std", "rand_core/std", "getrandom", "hex", "base64"]
serde = ["dep:serde"]
wasm = ["getrandom/js"]
hybrid = []
benchmarks = []  # Enable unstable benchmarking features (requires nightly Rust)
simd-enhanced = ["tokio", "parking_lot", "lru"]  # Enhanced SIMD features
observability = ["dep:synapsed-substrates", "dep:synapsed-serventis", "dep:tracing"]

[[bench]]
name = "kyber_benchmarks"
harness = false

[[bench]]
name = "dilithium_benchmarks"
harness = false
