[package]
name = "synapsed-promise"
version = "0.1.0"
edition = "2021"
authors = ["Synapsed Team"]
description = "Promise Theory implementation for autonomous agent cooperation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/synapsed-me/synapsed"
keywords = ["promise-theory", "agents", "cooperation", "intent", "verification"]
categories = ["network-programming", "concurrency"]

[dependencies]
# Core dependencies
synapsed-core = { path = "../../core/synapsed-core" }
synapsed-intent = { path = "../synapsed-intent" }
synapsed-substrates = { path = "../../observability/synapsed-substrates" }
synapsed-net = { path = "../../network/synapsed-net" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data structures
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections
dashmap = "5.5"
petgraph = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "promise_bench"
harness = false